--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,2 +1,29 @@
+html,body {
+  height: 100%;
+}
 
-/*# sourceMappingURL=app.css.map */
+body {
+    font-family: 'Lato';
+}
+
+.fa-btn {
+    margin-right: 6px;
+}
+
+.edit-wrapper {
+  width: 100%;
+  resize: none;
+  height: 100%;
+  border: none;
+}
+
+#panel_learn {
+  height: 100%;
+}
+
+.red {
+    color: #dd0000;
+}
+.green {
+    color: #009926;
+}
